--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
+    "react-icons": "^5.1.0",
     "tailwind-merge": "^2.3.0",
     "three": "^0.163.0",
     "three-globe": "^2.31.0"
