--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-element-to-jsx-string": "^15.0.0",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
     "tailwind-merge": "^2.3.0",
     "three": "^0.163.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
