--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-three/drei": "^9.105.2",
     "@react-three/fiber": "^8.16.1",
     "@tabler/icons-react": "^3.1.0",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.4",
@@ -23,6 +23,7 @@
     "react-element-to-jsx-string": "^15.0.0",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.1.0",
+    "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0",
     "three": "^0.163.0",
     "three-globe": "^2.31.0"
